--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -12,5 +12,10 @@ jobs:
         run: |
           node -v
           npm -v
-          
+      - name: python Command
+        run : |
+          import platform
+          print(platoform.processor())
+        shell: python
+
           
