--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -15,7 +15,7 @@ jobs:
       - name: python Command
         run : |
           import platform
-          print(platoform.processor())
+          print(platform.processor())
         shell: python
 
           
