--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -19,6 +19,7 @@ jobs:
         shell: python
   run-window-commamnd:
     runs-on: windows-latest
+    needs: [run-shell-command]
     steps:
       - name: yo
         run: Get-Location
