--- a/.github/workflows/simple3.yml
+++ b/.github/workflows/simple3.yml
@@ -12,6 +12,10 @@ jobs:
           ls
       - name: Test-Checkout
         uses: actions/checkout@v1
+      - name: List Files after checkout
+        run: |
+          pwd
+          ls
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
